Improve reader invalid-input reporting (#6)